[gd_scene load_steps=4 format=2]

[ext_resource path="res://plot.gd" type="Script" id=1]
[ext_resource path="res://addon/MathPlot.gd" type="Script" id=2]
[ext_resource path="res://data_send.gd" type="Script" id=3]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 150.587
margin_top = 58.218
margin_right = 242.587
margin_bottom = 81.218
rect_scale = Vector2( 5, 5 )
text = "MainenMood"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
margin_left = -162.46
margin_top = -99.912
margin_right = -162.46
margin_bottom = -99.912
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MathPlot" type="ColorRect" parent="Control"]
margin_left = 1017.7
margin_top = 268.452
margin_right = 1419.7
margin_bottom = 458.452
color = Color( 0.901961, 0.690196, 0.690196, 0 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
plot_extent = [ Vector2( 0, 0 ), Vector2( 9, 4 ) ]
grid_spacing = Vector2( 1, 1 )
spline_length = 10.0

[node name="today" type="HSlider" parent="Control"]
margin_left = 367.483
margin_top = 329.569
margin_right = 696.483
margin_bottom = 346.569
max_value = 6.0
value = 3.0
tick_count = 7
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mood_slider" type="RichTextLabel" parent="Control/today"]
margin_left = 82.1225
margin_top = -25.1225
margin_right = 265.122
margin_bottom = -1.12247
text = "How do you feel today?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/today"]
margin_left = -61.3579
margin_top = 1.13327
margin_right = 374.642
margin_bottom = 15.1333
text = "Terrible                                                                                        Great"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="week" type="HSlider" parent="Control"]
margin_left = 369.483
margin_top = 430.568
margin_right = 698.483
margin_bottom = 447.568
max_value = 6.0
value = 3.0
tick_count = 7
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mood_variance" type="RichTextLabel" parent="Control/week"]
margin_left = 48.5
margin_top = -28.0
margin_right = 346.5
margin_bottom = -4.0
text = "How did you feel for the past week?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Control/week"]
margin_left = -63.3579
margin_top = 0.133331
margin_right = 372.642
margin_bottom = 14.1333
text = "Terrible                                                                                        Great"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="future" type="HSlider" parent="Control"]
margin_left = 371.483
margin_top = 532.068
margin_right = 700.483
margin_bottom = 549.068
max_value = 6.0
value = 3.0
tick_count = 7
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mood_variance" type="RichTextLabel" parent="Control/future"]
margin_left = 25.0
margin_top = -33.0
margin_right = 376.0
margin_bottom = -2.0
text = "How do you think you will feel next week?
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Control/future"]
margin_left = -62.4292
margin_top = 1.27835
margin_right = 373.571
margin_bottom = 15.2784
text = "Terrible                                                                                        Great"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Control"]
margin_left = 415.104
margin_top = 613.563
margin_right = 531.104
margin_bottom = 648.563
rect_scale = Vector2( 2, 2 )
text = "SUBMIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]
script = ExtResource( 3 )

[node name="ht1" type="Node2D" parent="."]
position = Vector2( 180.571, 791.894 )
scale = Vector2( 4, 4 )

[node name="Label" type="Label" parent="ht1"]
margin_left = -12.9892
margin_top = 1.96999
margin_right = 483.011
margin_bottom = 15.97
rect_scale = Vector2( 0.25, 0.25 )
text = "Terrible                                                                                                       Great"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="h1" type="Polygon2D" parent="ht1"]
scale = Vector2( 1, 0.5 )
color = Color( 0.00392157, 0.329412, 0.403922, 1 )
polygon = PoolVector2Array( 0, 0, 0, 10, 10, 10, 10, 0 )

[node name="h2" type="Polygon2D" parent="ht1"]
position = Vector2( 14, 0 )
scale = Vector2( 1, 0.5 )
color = Color( 0.00392157, 0.329412, 0.403922, 1 )
polygon = PoolVector2Array( 0, 0, 0, 10, 10, 10, 10, 0 )

[node name="h3" type="Polygon2D" parent="ht1"]
position = Vector2( 30, 0 )
scale = Vector2( 1, 0.5 )
color = Color( 0.00392157, 0.329412, 0.403922, 1 )
polygon = PoolVector2Array( 0, 0, 0, 10, 10, 10, 10, 0 )

[node name="h4" type="Polygon2D" parent="ht1"]
position = Vector2( 46, 0 )
scale = Vector2( 1, 0.5 )
color = Color( 0.00392157, 0.329412, 0.403922, 1 )
polygon = PoolVector2Array( 0, 0, 0, 10, 10, 10, 10, 0 )

[node name="h5" type="Polygon2D" parent="ht1"]
position = Vector2( 61, 0 )
scale = Vector2( 1, 0.5 )
color = Color( 0.00392157, 0.329412, 0.403922, 1 )
polygon = PoolVector2Array( 0, 0, 0, 10, 10, 10, 10, 0 )

[node name="h6" type="Polygon2D" parent="ht1"]
position = Vector2( 76, 0 )
scale = Vector2( 1, 0.5 )
color = Color( 0.00392157, 0.329412, 0.403922, 1 )
polygon = PoolVector2Array( 0, 0, 0, 10, 10, 10, 10, 0 )

[node name="h7" type="Polygon2D" parent="ht1"]
position = Vector2( 91, 0 )
scale = Vector2( 1, 0.5 )
color = Color( 0.00392157, 0.329412, 0.403922, 1 )
polygon = PoolVector2Array( 0, 0, 0, 10, 10, 10, 10, 0 )

[node name="v1" type="Label" parent="ht1"]
margin_left = 1.5
margin_top = 0.25
margin_right = 17.5
margin_bottom = 14.25
rect_scale = Vector2( 0.5, 0.5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="v2" type="Label" parent="ht1"]
margin_left = 15.75
margin_top = 0.25
margin_right = 31.75
margin_bottom = 14.25
rect_scale = Vector2( 0.5, 0.5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="v3" type="Label" parent="ht1"]
margin_left = 32.0
margin_top = 0.25
margin_right = 48.0
margin_bottom = 14.25
rect_scale = Vector2( 0.5, 0.5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="v4" type="Label" parent="ht1"]
margin_left = 47.5
margin_top = 0.25
margin_right = 63.5
margin_bottom = 14.25
rect_scale = Vector2( 0.5, 0.5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="v5" type="Label" parent="ht1"]
margin_left = 62.5
margin_top = 0.25
margin_right = 78.5
margin_bottom = 14.25
rect_scale = Vector2( 0.5, 0.5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="v6" type="Label" parent="ht1"]
margin_left = 77.75
margin_top = 0.25
margin_right = 93.75
margin_bottom = 14.25
rect_scale = Vector2( 0.5, 0.5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="v7" type="Label" parent="ht1"]
margin_left = 92.5
margin_top = 0.25
margin_right = 108.5
margin_bottom = 14.25
rect_scale = Vector2( 0.5, 0.5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ht2" type="Node2D" parent="."]
visible = false
position = Vector2( 180.571, 791.894 )
scale = Vector2( 4, 4 )

[node name="Label" type="Label" parent="ht2"]
margin_left = -12.9892
margin_top = 1.96999
margin_right = 483.011
margin_bottom = 15.97
rect_scale = Vector2( 0.25, 0.25 )
text = "Terrible                                                                                                       Great"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="h1" type="Polygon2D" parent="ht2"]
scale = Vector2( 1, 0.5 )
color = Color( 0.00392157, 0.329412, 0.403922, 1 )
polygon = PoolVector2Array( 0, 0, 0, 10, 10, 10, 10, 0 )

[node name="h2" type="Polygon2D" parent="ht2"]
position = Vector2( 14, 0 )
scale = Vector2( 1, 0.5 )
color = Color( 0.00392157, 0.329412, 0.403922, 1 )
polygon = PoolVector2Array( 0, 0, 0, 10, 10, 10, 10, 0 )

[node name="h3" type="Polygon2D" parent="ht2"]
position = Vector2( 30, 0 )
scale = Vector2( 1, 0.5 )
color = Color( 0.00392157, 0.329412, 0.403922, 1 )
polygon = PoolVector2Array( 0, 0, 0, 10, 10, 10, 10, 0 )

[node name="h4" type="Polygon2D" parent="ht2"]
position = Vector2( 46, 0 )
scale = Vector2( 1, 0.5 )
color = Color( 0.00392157, 0.329412, 0.403922, 1 )
polygon = PoolVector2Array( 0, 0, 0, 10, 10, 10, 10, 0 )

[node name="h5" type="Polygon2D" parent="ht2"]
position = Vector2( 61, 0 )
scale = Vector2( 1, 0.5 )
color = Color( 0.00392157, 0.329412, 0.403922, 1 )
polygon = PoolVector2Array( 0, 0, 0, 10, 10, 10, 10, 0 )

[node name="h6" type="Polygon2D" parent="ht2"]
position = Vector2( 76, 0 )
scale = Vector2( 1, 0.5 )
color = Color( 0.00392157, 0.329412, 0.403922, 1 )
polygon = PoolVector2Array( 0, 0, 0, 10, 10, 10, 10, 0 )

[node name="h7" type="Polygon2D" parent="ht2"]
position = Vector2( 91, 0 )
scale = Vector2( 1, 0.5 )
color = Color( 0.00392157, 0.329412, 0.403922, 1 )
polygon = PoolVector2Array( 0, 0, 0, 10, 10, 10, 10, 0 )

[node name="v1" type="Label" parent="ht2"]
margin_left = 1.5
margin_top = 0.25
margin_right = 17.5
margin_bottom = 14.25
rect_scale = Vector2( 0.5, 0.5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="v2" type="Label" parent="ht2"]
margin_left = 15.75
margin_top = 0.25
margin_right = 31.75
margin_bottom = 14.25
rect_scale = Vector2( 0.5, 0.5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="v3" type="Label" parent="ht2"]
margin_left = 32.0
margin_top = 0.25
margin_right = 48.0
margin_bottom = 14.25
rect_scale = Vector2( 0.5, 0.5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="v4" type="Label" parent="ht2"]
margin_left = 47.5
margin_top = 0.25
margin_right = 63.5
margin_bottom = 14.25
rect_scale = Vector2( 0.5, 0.5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="v5" type="Label" parent="ht2"]
margin_left = 62.5
margin_top = 0.25
margin_right = 78.5
margin_bottom = 14.25
rect_scale = Vector2( 0.5, 0.5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="v6" type="Label" parent="ht2"]
margin_left = 77.75
margin_top = 0.25
margin_right = 93.75
margin_bottom = 14.25
rect_scale = Vector2( 0.5, 0.5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="v7" type="Label" parent="ht2"]
margin_left = 92.5
margin_top = 0.25
margin_right = 108.5
margin_bottom = 14.25
rect_scale = Vector2( 0.5, 0.5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_right = 12.0
margin_bottom = 12.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="value_changed" from="Control/today" to="." method="_on_today_value_changed"]
[connection signal="value_changed" from="Control/week" to="." method="_on_week_value_changed"]
[connection signal="value_changed" from="Control/future" to="." method="_on_future_value_changed"]
[connection signal="pressed" from="Control/Button" to="." method="_on_Button_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
